examples/datalog/18_advanced_patterns/34_gap_detection.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_gaps
Knowledge graph 'test_gaps' created.
Switched to knowledge graph: test_gaps
> .kg use test_gaps
Switched to knowledge graph: test_gaps
> +existing[(1,), (2,), (4,), (5,), (8,)].
Inserted 5 fact(s) into 'existing'.
> gap_start(X) :- existing(X), X1 = X + 1, !existing(X1).
Script error: Query execution failed: Unsafe rule: Atom { relation: "gap_start", args: [Variable("X")] }. Variables [] in head do not appear in positive body atoms.
